@@ -89,6 +89,7 @@ Bugs fixed
 * #7536: sphinx-autogen: crashes when template uses i18n feature
 * #2785: html: Bad alignment of equation links
 * #7581: napoleon: bad parsing of inline code in attribute docstrings
+* #7610: incorrectly renders consecutive backslashes for docutils-0.16
 
 Testing
 --------
